<resources>
    <string name="app_name">Orange Scrum</string>
    <string name="login_activity_name">Login</string>
    <string name="dashboard_activity_name">Welcome</string>
    <string name="forgot_password_activity_name">Forgot Password</string>
    <string name="search_hint">Type project name…</string>
    <string name="title_activity_dash_board">Welcome</string>
    <string name="action_settings">Settings</string>
    <string name="title_notifications">Notifications</string>
    <string name="my_dashboard">Dashboard</string>
    <string name="dashboard">Dashboard</string>
    <string name="resource_management">Resource Management</string>
    <string name="project_management">Project Management</string>
    <string name="title_task">Task</string>
    <string name="log_time">Log Time</string>
    <string name="test_case">Test Case</string>
    <string name="defect">Defect</string>
    <string name="risk">Risk</string>
    <string name="expenses">Expenses</string>
    <string name="files">Files</string>
    <string name="milestone">MileStone</string>
    <string name="analytics">Analytics</string>
    <string name="archive">Archive</string>
    <string name="recently_viewed">Recently Viewed</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="task_status">Task Status</string>
</resources>
